objects/Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Feedback</relationshipLabel>
        <relationshipName>Customer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Name__r.Owner.FirstName &amp; &quot; &quot; &amp; Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_owner_email_formula__c</fullName>
        <formula>Account_Name__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account owner email formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Contact_Name__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact_Name</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Feedback</relationshipLabel>
        <relationshipName>Customer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_e_mail__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact e-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Contact_Name__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <formula>CreatedBy.FirstName  &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Level__c</fullName>
        <label>Customer Satisfaction Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Feedback_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>5-Very satisfied</fullName>
                </value>
                <value>
                    <fullName>4- Satisfied</fullName>
                </value>
                <value>
                    <fullName>3- Neither Satisfied nor Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2- Not very Satisfied</fullName>
                </value>
                <value>
                    <fullName>1- Not at all Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>If (ISPICKVAL(Account_Name__r.Type, &quot;Customer&quot;),&quot;Customer&quot;,
				If (ISPICKVAL(Account_Name__r.Type, &quot;Non-Customer&quot;),&quot;Non-Customer&quot;,
								If (ISPICKVAL(Account_Name__r.Type, &quot;Competitor&quot;),&quot;Competitor&quot;,
												If (ISPICKVAL(Account_Name__r.Type, &quot;Dealer&quot;),&quot;Dealer&quot;,
																If (ISPICKVAL(Account_Name__r.Type, &quot;Contract Packager&quot;),&quot;Contract Packager&quot;, &quot;NA&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>IF(ISPICKVAL(Account_Name__r.Division__c, &quot;LPM&quot;), &quot;LPM&quot;,

IF(ISPICKVAL(Account_Name__r.Division__c, &quot;Graphics&quot;), &quot;Graphics&quot;
,
IF(ISPICKVAL(Account_Name__r.Division__c, &quot;Reflective&quot;), &quot;Reflective&quot;, &quot;NA&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Category__c</fullName>
        <label>Feedback Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD Touchpoints</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Description__c</fullName>
        <description>Feedback Description</description>
        <label>Feedback Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Number__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <description>Feedback type</description>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive feedback</fullName>
                </value>
                <value>
                    <fullName>Negative feedback</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Region__c</fullName>
        <formula>Contact_Name__r.Geographic_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_address__c</fullName>
        <formula>(If (NOT(ISBLANK(Contact_Name__r.MailingStreet)), Contact_Name__r.MailingStreet &amp; &quot;, &quot;, &quot;&quot;)) &amp;
(If (NOT(ISBLANK(Contact_Name__r.MailingCity)), Contact_Name__r.MailingCity &amp; &quot;, &quot;, &quot;&quot;)) &amp;
(If (NOT(ISBLANK(Contact_Name__r.MailingState)), Contact_Name__r.MailingState &amp; &quot;, &quot;, &quot;&quot;)) &amp;
(If (NOT(ISBLANK(Contact_Name__r.MailingPostalCode)), Contact_Name__r.MailingPostalCode &amp; &quot;, &quot;, &quot;&quot;)) &amp;
(If (NOT(ISBLANK(Contact_Name__r.MailingCountry)), Contact_Name__r.MailingCountry, &quot;&quot;))</formula>
        <label>Mailing address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newsletter_OptOut__c</fullName>
        <formula>IF( Contact_Name__r.Newsletter_Opt_Out__c = TRUE, &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newsletter Opt-Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ok_to_Send_Surveys__c</fullName>
        <formula>If (ISPICKVAL(Contact_Name__r.Ok_to_Send_Surveys__c, &quot;Yes&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ok-to-Send Surveys</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Area_Function__c</fullName>
        <description>Specific Area / Function</description>
        <label>Specific Area / Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD personnel (Sales Rep, BD, Technical Service, ...)</fullName>
                </value>
                <value>
                    <fullName>ADvantage Services</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
                <value>
                    <fullName>Logistics / Delivery</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing / Quotation</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Product Quality (QA)</fullName>
                </value>
                <value>
                    <fullName>Service Program</fullName>
                </value>
                <value>
                    <fullName>Website / Customer Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Cust_Feedback__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Corrective_Action_Description__c</fullName>
        <label>Suggested Corrective Action Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Customer Feedback</label>
    <listViews>
        <fullName>China_Customer_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Specific_Area_Function__c</columns>
        <columns>Customer_Satisfaction_Level__c</columns>
        <columns>Feedback_Description__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Feedback</label>
    </listViews>
    <listViews>
        <fullName>China_Customer_Feedback1</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Specific_Area_Function__c</columns>
        <columns>Customer_Satisfaction_Level__c</columns>
        <columns>Feedback_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China Customer Feedback</label>
    </listViews>
    <listViews>
        <fullName>India_Customer_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Specific_Area_Function__c</columns>
        <columns>Customer_Satisfaction_Level__c</columns>
        <columns>Feedback_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India Customer Feedback</label>
    </listViews>
    <nameField>
        <displayFormat>CF{000000}</displayFormat>
        <label>Customer Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback</pluralLabel>
    <recordTypes>
        <fullName>Voice_Of_CustomerAP</fullName>
        <active>true</active>
        <label>Voice Of CustomerAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Voice_of_CustomerEU</fullName>
        <active>true</active>
        <label>Voice of CustomerEU</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_and_Contact_Validation</fullName>
        <active>true</active>
        <description>Account name and Contact&apos;s Account Name should match</description>
        <errorConditionFormula>NOT (Account_Name__r.Name ==  Contact_Name__r.Account.Name )</errorConditionFormula>
        <errorMessage>Account Name and Contact&apos;s Account Name should be same. Please check and correct the values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Access_to_the_Account_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name =&apos;Voice Of CustomerAP&apos;,($User.FirstName &amp; &apos; &apos; &amp;  $User.LastName) == Account_Owner__c,OR(ISCHANGED(Feedback_Type__c ),ISCHANGED(Customer_Satisfaction_Level__c),ISCHANGED(Specific_Area_Function__c),ISCHANGED(Feedback_Description__c) ))</errorConditionFormula>
        <errorMessage>You are not authorized to edit these fields.</errorMessage>
    </validationRules>
</CustomObject>